# my-project

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Bug-fix report PythonIRCv0.1.1(EN).md  Bug-fix report PythonIRCv0.1.1(RU).md  Bug-fix report PythonIRCv0.1.2.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  irc_chat.db  prometheus.yml  pyproject.toml  requirements.txt  verify_system.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d89e31f1bbd9_initial.py
app/: auth.py  chat.py  database.py  main.py
app/core/: config.py  redis.py
app/models/: models.py
app/routers/: auth.py  chat.py
app/schemas/: auth.py
app/services/: auth.py  chat.py
app/tests/: conftest.py  test_auth.py  test_chat.py
client/: cli.py  ghostchat.html
