[project]
name = "pythonircv0-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aioconsole==0.8.2",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "bcrypt==4.2.1",
    "fastapi==0.135.3",
    "gunicorn==25.3.0",
    "httpx==0.28.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "redis==7.4.0",
    "requests==2.33.1",
    "sentry-sdk==2.57.0",
    "sqlalchemy==2.0.49",
    "uvicorn[standard]==0.41.0",
    "websockets==16.0",
]

[dependency-groups]
dev = [
    "fakeredis==2.34.1",
    "pre-commit",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "RUF"]
ignore = ["E501", "B008", "S101"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
